[package]
name = "bevy_r_place"
version = "0.1.0"
edition = "2024"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "bevy",
  "p2p",
  "r-place",
]
categories = [
  "art",
  "p2p",
]
homepage = "https://github.com/mosure/bevy_r_place"
repository = "https://github.com/mosure/bevy_r_place"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]
default-run = "viewer"


[features]
default = [
  "native",
  "viewer",
]

headless = []  # use for bootstrap nodes
viewer = [
  "bevy/bevy_gizmos",
]

native = [
  "libp2p-webrtc",
  "libp2p-webrtc/tokio",
  "libp2p-webrtc/pem",
  "tokio/rt-multi-thread",
  "winit",
]
web = [
  "libp2p-webrtc",
  "libp2p/websocket-websys",
  "libp2p/webtransport-websys",
  "tokio/rt",
]


[dependencies]
async-channel = "2.3"
bevy-inspector-egui = "0.29"
bevy_pancam = { version = "0.17", features = ["bevy_egui"] }
libp2p-webrtc = { version = "0.9.0-alpha", optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
winit = { version = "0.30", optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"


[dependencies.bevy]
version = "0.15"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_ui",
  "bevy_winit",
  "png",
  "x11",
]

[dependencies.libp2p]
version = "0.55"
features = [
  "async-std",
  "dns",
  "ed25519",
  "mdns",
  "floodsub",
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "mdns",
  "memory-connection-limits",
  "noise",
  "ping",
  "quic",
  "relay",
  "request-response",
  "rsa",
  "serde",
  "tcp",
  "tokio",
  "websocket",
  "yamux",
]

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
futures-intrusive = { version = "0.5.0" }
pollster = { version = "0.4.0" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1


[lib]
path = "src/lib.rs"

[[bin]]
name = "viewer"
path = "src/main.rs"
