[package]
name = "bevy_r_place"
description = "p2p r/place clone using bevy"
version = "0.1.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "bevy",
  "p2p",
  "r-place",
]
categories = [
  "games",
  "graphics",
  "network-programming",
  "visualization",
  "wasm",
]
homepage = "https://github.com/mosure/bevy_r_place"
repository = "https://github.com/mosure/bevy_r_place"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]
default-run = "viewer"


[features]
default = [
  "native",
  "viewer",
]

aws = [
  "aws-config",
  "aws-sdk-secretsmanager",
]
viewer = [
  "bevy/bevy_gizmos",
]
metrics = [
  # "libp2p/metrics",
  # "opentelemetry",
  # "opentelemetry-otlp",
  # "opentelemetry_sdk",
  # "prometheus-client",
  # "tracing",
  # "tracing-opentelemetry",
  # "tracing-subscriber",
]

native = [
  "libp2p-webrtc",
  "libp2p-webrtc/pem",
  "libp2p-webrtc/tokio",
  "libp2p/tcp",
  "libp2p/tokio",
  "rcgen",
  "tokio/rt-multi-thread",
  "winit",
]
web = [
  "bevy/webgl2",
  "libp2p-webrtc-websys",
  "libp2p/wasm-bindgen",
  "libp2p/websocket-websys",
  "libp2p/webtransport-websys",
  "tokio/rt",
  "web-time",
]


[dependencies]
async-channel = "2.3"
async-trait = "0.1"
aws-config = { version = "1.5", optional = true }
aws-sdk-secretsmanager = { version = "1.61", optional = true }
bevy_args = "1.7"
bevy-inspector-egui = "0.29"
bevy_pancam = { version = "0.17", features = ["bevy_egui"] }
cbor4ii = { version = "1.0", features = ["serde1", "use_std"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
futures-lite = "2.6"
libp2p-webrtc = { version = "0.9.0-alpha", optional = true }
libp2p-webrtc-websys = { version = "0.4.0", optional = true }
rand = "0.8.5"
rcgen = { version = "0.13", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
web-time = { version = "1.1", optional = true }
winit = { version = "0.30", optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"


[dependencies.bevy]
version = "0.15"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_ui",
  "bevy_winit",
  "png",
  "x11",
]

[dependencies.libp2p]
version = "0.55"
features = [
  "async-std",
  "cbor",
  "dcutr",
  "dns",
  "ed25519",
  "mdns",
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "mdns",
  "memory-connection-limits",
  "noise",
  "ping",
  "quic",
  "relay",
  "request-response",
  "rsa",
  "serde",
  "tls",
  "websocket",
  "yamux",
]

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Performance',
  'Window',
]


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
futures-intrusive = { version = "0.5.0" }
pollster = { version = "0.4.0" }
serial_test = "3.2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1


[lib]
path = "src/lib.rs"

[[bin]]
name = "viewer"
path = "src/main.rs"
